[package]
name = "aluminium"
version = "0.1.0"
authors = ["pluxtore <alexander.nosurname@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
serde = {version = "1.0.114", features = ["derive"]}
serde_derive = "1.0.114"
hex = "0.4.2"
log = "0.4.11"
bincode = "1.0"
fern = {version = "0.5", features = ["colored"]}
chrono = "0.4.13"
rand = "0.7.3"
byteorder = "1.3.4"
lazy_static = "1.4.0"
