[package]
name = "maze-master"
version = "0.1.0"
authors = ["pluxtore <alexander.nosurname@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
rocket = "0.4.5"
lazy_static = "1.4.0"
serde = {version = "1.0.114", features = ["derive"]}
serde_derive = "1.0.114"
bincode = "1.0"